# fanorona-tactician

./: .gitignore  CHANGELOG.md  LICENSE  README.md  STORY.md  THIRD_PARTY_NOTICES.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml  pages.yml
android/: AndroidManifest.xml  FanoronaAndroid.csproj  MainActivity.cs  build.mjs  finalize.mjs  prepare.mjs
android/Resources/values/: styles.xml
android/Resources/values-v35/: styles.xml
app/: globals.css  layout.tsx  page.tsx  wasm-init.d.ts
app/components/: AppHeader.tsx  DraughtsAssistant.tsx  FanoronaAssistant.tsx  GameOverNotice.tsx  InstallGuideDialog.tsx  MorrisAssistant.tsx  TacticianApp.tsx  WebFanoronaAssistant.tsx  assistantTypes.ts
app/lib/: draughts.ts  draughts.worker.ts  fanorona.ts  fanorona.worker.ts  i18n.ts  morris-wasm.ts  morris.ts  morris.worker.ts  presentation.ts  pwaInstall.ts
launcher/: FanoronaLauncher.csproj  Program.cs  finalize.mjs  prepare.mjs
mobile/: entry.tsx  index.html  package.mjs  vite.config.ts
morris-engine/: Cargo.toml  README.md
morris-engine/src/: board.rs  clock.rs  evaluation.rs  ffi.rs  lib.rs  main.rs  mv.rs  position.rs  search.rs  tablebase.rs
morris-engine/tests/: core.rs
portable/: entry.tsx  package.mjs  vite.config.ts
public/: manifest.webmanifest  sw.js
scripts/: build-morris-wasm.mjs
tests/: draughts.test.ts  fanorona.test.ts  i18n.test.ts  mobile-package.test.mjs  morris-wasm-artifact.test.mjs  morris.test.ts  presentation.test.ts  pwa-install.test.ts  rendered-html.test.mjs
